--- a/styles/bio.scss
+++ b/styles/bio.scss
@@ -1,14 +1,25 @@
 @use "./partials/resets";
 @use "./partials/variables" as *;
 @use "./partials/typography" as *;
+@use "./partials/mixins" as *;
 
 .header {
     background-color: $primary-color;
     width: 100%;
+
+    @include tablet {
+        display: flex;
+        
+    }
     
     img{
         width: 100%;
-        padding: 2rem 15rem;
+        height: auto;
+        padding: 1.6rem 12rem 1.6rem;
+
+        @include tablet {
+            padding-left: 2.4rem;
+        }
     }
 }
 
@@ -16,12 +27,15 @@
     display: flex;
     justify-content: center;
 
+
+
     a{
         flex-grow: 1;
         text-decoration: none;
         text-align: center;
         padding-bottom: 1rem;
         font-size: 2rem;
+
     }
     a:hover {
         border-bottom: 3px solid $secondary-color;
@@ -49,21 +63,32 @@
         color: $secondary-color;
         font-weight: 600;
         font-size: 4rem;
+
+        @include tablet {
+            padding-left: 2.4rem;
+        }
     }
 }
 
 .about {
-
     h1{
         margin: 2.4rem 1.6rem 1.6rem;
         font-size: 3rem;
         font-weight: 600;
         color: $primary-color;
+
+        @include tablet {
+            padding-left: 2.4rem;
+        }
     }
 
     img{
         width: 100%;
         padding: 0 1.6rem;
+
+        @include tablet {
+            padding: 0 10rem;
+        }
     }
 
     p{
@@ -71,35 +96,75 @@
         margin-right: 1.6rem;
         font-size: 2rem;
         font-weight: 600;
+
+        @include tablet {
+            padding: 0 10rem;
+        }
     }
 }
 
 .bio {
+
     h2{
         font-weight: 600;
         font-size: 2rem;
         margin-left: 1.6rem;
+
+        @include tablet {
+            padding: 0 10rem;
+        }
     }
-    p{
+    &__info{
         font-size: 1.8rem;
         margin-left: 1.6rem;
         margin-right: 1.6rem;
+
+        @include tablet {
+            display: flex;
+            flex-wrap: nowrap;
+            padding: 0 10rem;
+        }
+
+        p {
+            @include tablet {
+                margin-right: 2.4rem;
+            }
+        }
     }
+
 }
+
 .gallery {
+    @include tablet {
+        padding-left: 2.4rem;
+    }
 
     h1 {
         margin: 2.4rem 1.6rem 1.6rem;
         font-size: 3rem;
         font-weight: 600;
         color: $primary-color;
+
+        @include tablet {
+            margin-left: 0;
+            margin-top: 3.6rem;
+        }
     }
     img {
         width: 100%;
         height: auto;
         padding: .8rem 1.6rem;
+
+        @include tablet {
+            padding: 0;
+            width: 33%;
+            padding-right: 2.4rem;
+            padding-bottom: 2.4rem;
+        }
     }
+    
 }
+
 .contact {
     background-color: $primary-color;
     color: $secondary-color;
@@ -110,6 +175,12 @@
         padding-top: 2.4rem;
         font-size: 3rem;
         font-weight: 600;
+    }
+    &__booking {
+        @include tablet {
+            display: flex;
+            justify-content: space-around;
+        }
     }
 }
 .icons img{
