--- a/styles/bio.css
+++ b/styles/bio.css
@@ -40,6 +40,7 @@ body {
 @media (min-width: 768px) {
   .header {
     display: flex;
+    justify-content: flex-start;
   }
 }
 .header img {
@@ -49,13 +50,21 @@ body {
 }
 @media (min-width: 768px) {
   .header img {
-    padding-left: 2.4rem;
+    padding-left: 3rem;
+    padding-top: 2.5rem;
+    padding-right: 3rem;
   }
 }
 
 .navbar {
   display: flex;
   justify-content: center;
+}
+@media (min-width: 768px) {
+  .navbar div {
+    margin: 3rem 2rem 1rem 2rem;
+    font-size: 1.6rem;
+  }
 }
 .navbar a {
   flex-grow: 1;
@@ -92,7 +101,10 @@ body {
 }
 @media (min-width: 768px) {
   .hero h1 {
-    padding-left: 2.4rem;
+    margin-left: 2.4rem;
+    font-size: 6rem;
+    padding-top: 25rem;
+    padding-bottom: 25rem;
   }
 }
 
@@ -104,7 +116,8 @@ body {
 }
 @media (min-width: 768px) {
   .about h1 {
-    padding-left: 2.4rem;
+    margin-top: 3.6rem;
+    font-size: 3.6rem;
   }
 }
 .about img {
@@ -116,18 +129,46 @@ body {
     padding: 0 10rem;
   }
 }
-.about p {
+.about__quote {
   margin-left: 1.6rem;
   margin-right: 1.6rem;
   font-size: 2rem;
   font-weight: 600;
+  color: #323232;
 }
 @media (min-width: 768px) {
-  .about p {
+  .about__quote {
     padding: 0 10rem;
+    margin-left: 0rem;
+    margin-right: 0rem;
+    font-size: 2.4rem;
+    margin-bottom: 1.6rem;
+  }
+}
+.about__credit {
+  margin-left: 1.6rem;
+  margin-right: 1.6rem;
+  font-size: 2rem;
+  font-weight: 600;
+  color: #323232;
+}
+@media (min-width: 768px) {
+  .about__credit {
+    margin: 0;
+    padding: 0 10rem;
+    font-weight: 400;
   }
 }
 
+.bio {
+  color: #323232;
+}
+@media (min-width: 768px) {
+  .bio {
+    margin-left: 9rem;
+    margin-right: 9rem;
+  }
+}
 .bio h2 {
   font-weight: 600;
   font-size: 2rem;
@@ -135,7 +176,9 @@ body {
 }
 @media (min-width: 768px) {
   .bio h2 {
-    padding: 0 10rem;
+    margin-top: 3.6rem;
+    font-size: 2.4rem;
+    margin-left: 1rem;
   }
 }
 .bio__info {
@@ -147,12 +190,14 @@ body {
   .bio__info {
     display: flex;
     flex-wrap: nowrap;
-    padding: 0 10rem;
+    justify-content: space-between;
+    font-size: 2rem;
+    margin: 0;
   }
 }
 @media (min-width: 768px) {
   .bio__info p {
-    margin-right: 2.4rem;
+    margin: 0 1rem;
   }
 }
 
