--- a/styles/bio.scss
+++ b/styles/bio.scss
@@ -9,7 +9,7 @@
 
     @include tablet {
         display: flex;
-        
+        justify-content: flex-start;
     }
     
     img{
@@ -18,7 +18,10 @@
         padding: 1.6rem 12rem 1.6rem;
 
         @include tablet {
-            padding-left: 2.4rem;
+            
+            padding-left: 3rem;
+            padding-top: 2.5rem;
+            padding-right: 3rem;
         }
     }
 }
@@ -27,14 +30,19 @@
     display: flex;
     justify-content: center;
 
-
-
+    div{
+        @include tablet {
+            margin: 3rem 2rem 1rem 2rem;
+            font-size: 1.6rem;  
+        }
+    }
     a{
         flex-grow: 1;
         text-decoration: none;
         text-align: center;
         padding-bottom: 1rem;
         font-size: 2rem;
+
 
     }
     a:hover {
@@ -64,7 +72,10 @@
         font-size: 4rem;
 
         @include tablet {
-            padding-left: 2.4rem;
+            margin-left: 2.4rem;
+            font-size: 6rem;
+            padding-top: 25rem;
+            padding-bottom: 25rem;
         }
     }
 }
@@ -75,9 +86,10 @@
         font-size: 3rem;
         font-weight: 600;
         color: $primary-color;
-
+    
         @include tablet {
-            padding-left: 2.4rem;
+            margin-top: 3.6rem;
+            font-size: 3.6rem;
         }
     }
 
@@ -89,28 +101,52 @@
             padding: 0 10rem;
         }
     }
-
-    p{
+    &__quote{
         margin-left: 1.6rem;
         margin-right: 1.6rem;
         font-size: 2rem;
         font-weight: 600;
+        color: $primary-color;
 
         @include tablet {
             padding: 0 10rem;
+            margin-left: 0rem;
+            margin-right: 0rem;
+            font-size: 2.4rem;
+            margin-bottom: 1.6rem;
+        }
+    }
+    &__credit {
+        margin-left: 1.6rem;
+        margin-right: 1.6rem;
+        font-size: 2rem;
+        font-weight: 600;
+        color: $primary-color;
+        
+        @include tablet {
+            margin: 0;
+            padding: 0 10rem;
+            font-weight: 400;
         }
     }
 }
 
 .bio {
+    color: $primary-color;
 
+    @include tablet {
+        margin-left: 9rem;
+        margin-right: 9rem;
+    }
     h2{
         font-weight: 600;
         font-size: 2rem;
         margin-left: 1.6rem;
 
         @include tablet {
-            padding: 0 10rem;
+            margin-top: 3.6rem;
+            font-size: 2.4rem;
+            margin-left: 1rem;
         }
     }
     &__info{
@@ -121,12 +157,15 @@
         @include tablet {
             display: flex;
             flex-wrap: nowrap;
-            padding: 0 10rem;
+            justify-content: space-between;
+            
+            font-size: 2rem;
+            margin: 0;
         }
 
         p {
             @include tablet {
-                margin-right: 2.4rem;
+                margin: 0 1rem
             }
         }
     }
