--- a/styles/bio.css
+++ b/styles/bio.css
@@ -43,20 +43,20 @@ body {
     justify-content: flex-start;
   }
 }
-.header img {
+.header__img {
   width: 100%;
-  height: auto;
-  padding: 1.6rem 12rem 1.6rem;
+  max-height: 30px;
+  margin: 1.6rem 0;
 }
 @media (min-width: 768px) {
-  .header img {
+  .header__img {
     padding-left: 3rem;
     padding-top: 2.5rem;
     padding-right: 3rem;
   }
 }
 @media (min-width: 1280px) {
-  .header img {
+  .header__img {
     padding-left: 15rem;
   }
 }
@@ -66,7 +66,7 @@ body {
   justify-content: center;
 }
 @media (min-width: 768px) {
-  .navbar div {
+  .navbar__tab {
     margin: 3rem 2rem 1rem 2rem;
     font-size: 1.6rem;
   }
@@ -77,6 +77,7 @@ body {
   text-align: center;
   padding-bottom: 1rem;
   font-size: 2rem;
+  border-bottom: 3px solid #323232;
 }
 .navbar a:hover {
   border-bottom: 3px solid #FFFFFF;
@@ -121,20 +122,20 @@ body {
   }
 }
 
-.about h1 {
+.about__title {
   margin: 2.4rem 1.6rem 1.6rem;
   font-size: 3rem;
   font-weight: 600;
   color: #323232;
 }
 @media (min-width: 768px) {
-  .about h1 {
+  .about__title {
     margin-top: 3.6rem;
     font-size: 3.6rem;
   }
 }
 @media (min-width: 1280px) {
-  .about h1 {
+  .about__title {
     margin-left: 0;
     padding-left: 15rem;
   }
