--- a/styles/bio.scss
+++ b/styles/bio.scss
@@ -19,12 +19,12 @@
         margin: 1.6rem 0;
 
         @include tablet {
-            padding-left: 3rem;
-            padding-top: 2.5rem;
-            padding-right: 3rem;
+            padding-right: 4rem;
+            margin: 2.4rem 2.4rem;
         }
         @include desktop {
-            padding-left: 15rem;
+            padding-left: 13rem;
+            margin-left: 0;
         }
     }
 }
@@ -34,6 +34,7 @@
     justify-content: center;
 
     &__tab{
+        
         @include tablet {
             margin: 3rem 2rem 1rem 2rem;
             font-size: 1.6rem;  
@@ -64,7 +65,7 @@
     background-size: cover;
     position: relative;
     
-    h1{
+    &__title{
         margin: 0;
         margin-left: 1.6rem;
         padding-top: 15rem;
@@ -83,7 +84,7 @@
             margin: 0;
             padding-top: 35rem;
             padding-bottom: 35rem;
-            padding-left: 15rem;
+            padding-left: 13rem;
         }
     }
 }
@@ -101,7 +102,7 @@
         }
         @include desktop {
             margin-left: 0;
-            padding-left: 15rem;
+            padding-left: 13rem;
         }
     }
 
@@ -161,7 +162,7 @@
     @include desktop {
         margin: 0 19rem;
     }
-    h2{
+    &__title {
         font-weight: 600;
         font-size: 2rem;
         margin-left: 1.6rem;
@@ -198,13 +199,13 @@
 
 .gallery {
     @include tablet {
-        padding-left: 2.4rem;
+        padding: 0 2.4rem;
     }
     @include desktop {
-        padding: 0 15rem;
+        padding: 0 13rem;
     }
 
-    h1 {
+    &__title {
         margin: 2.4rem 1.6rem 1.6rem;
         font-size: 3rem;
         font-weight: 600;
@@ -216,16 +217,22 @@
             font-size: 3.6rem;
         }
     }
+    
+    &__img {
+        display: flex;
+        flex-wrap: wrap;
+        
+        
+    }
+    
     img {
         width: 100%;
         height: auto;
         padding: .8rem 1.6rem;
 
         @include tablet {
-            padding: 0;
+            padding: 1rem;
             width: 33%;
-            padding-right: 2.4rem;
-            padding-bottom: 2.4rem;
         }
     }
     
@@ -236,10 +243,10 @@
     color: $secondary-color;
 
     @include desktop {
-        padding: 0 15rem;
+        padding: 0 13rem;
     }
     
-    h1 {
+    &__title {
         margin: 0;
         margin-left: 1.6rem;
         padding-top: 2.4rem;
@@ -262,7 +269,7 @@
             margin: 0 2.4rem;
             padding-top: 3.6rem;
         }
-        h1{
+        h2{
             @include tablet {
                 font-size: 3.6rem;
             }
@@ -290,7 +297,7 @@
         margin: 0;
     }
 
-    h3{
+    &__name{
         margin: 0;
         margin-top: 3.2rem;
         font-weight: 500;
@@ -305,7 +312,7 @@
     
 }
 .copyright {
-    p{
+    &__info {
         margin: 0;
         margin-left: 1.6rem;
         padding-bottom: 1.6rem;
