--- a/styles/bio.scss
+++ b/styles/bio.scss
@@ -237,6 +237,67 @@
     }
     
 }
+.commentsContainer {
+    padding: 0 1.6rem;
+
+    h2{
+
+    }
+}
+.commentsPage {
+    display: flex;
+    flex-direction: column;
+
+    &__title {
+        margin-bottom: 0;
+        font-weight: 400;
+        font-size: 1.6rem;
+        color: $quaternary-color;
+        
+
+    }
+    
+ 
+    &__name {
+        min-height: 3.6rem;
+        
+    }
+    &__comment {
+        margin-bottom: 1.6rem;
+        min-height: 7.2rem;
+    }
+    &__submit {
+        margin-bottom:1.6rem; 
+        height: 3.2rem;
+        width: 85%;
+        background-color: $primary-color;
+        border-radius: 4px;
+    }
+    
+    &__name,
+    &__comment {
+        width: 85%;
+        margin-left: 1rem;
+        border-radius: 4px;
+        border-color: $quaternary-color;
+        background-color: $tertiary-color;
+    }
+
+    &__title,
+    &__comment,
+    &__submit {
+        margin-left: 5rem;
+    }        
+ 
+    
+}
+.profilePic {
+    border-radius: 50%;
+    height: 3.6rem;
+    width: 3.6rem;
+    position: relative;
+    top: 1.2rem;   
+}
 
 .contact {
     background-color: $primary-color;
