--- a/styles/bio.css
+++ b/styles/bio.css
@@ -294,17 +294,23 @@ body {
 }
 .commentsPage__name {
   min-height: 3.6rem;
+  font-family: "AvenirNext";
 }
 .commentsPage__comment {
   margin-bottom: 1.6rem;
   min-height: 7.2rem;
+  font-family: "AvenirNext";
 }
 .commentsPage__submit {
   margin-bottom: 1.6rem;
-  height: 3.2rem;
+  height: 5rem;
   width: 85%;
+  color: #FFFFFF;
+  font-size: 2rem;
+  font-family: "AvenirNext";
   background-color: #323232;
   border-radius: 4px;
+  border-style: none;
 }
 .commentsPage__name, .commentsPage__comment {
   width: 85%;
@@ -312,6 +318,7 @@ body {
   border-radius: 4px;
   border-color: #E1E1E1;
   background-color: #FAFAFA;
+  border: 2px solid #E1E1E1;
 }
 .commentsPage__title, .commentsPage__comment, .commentsPage__submit {
   margin-left: 5rem;
