--- a/styles/bio.scss
+++ b/styles/bio.scss
@@ -260,18 +260,24 @@
  
     &__name {
         min-height: 3.6rem;
+        font-family: "AvenirNext";
         
     }
     &__comment {
         margin-bottom: 1.6rem;
         min-height: 7.2rem;
+        font-family: "AvenirNext";
     }
     &__submit {
         margin-bottom:1.6rem; 
-        height: 3.2rem;
+        height: 5rem;
         width: 85%;
+        color: $secondary-color;
+        font-size: 2rem;
+        font-family: "AvenirNext";
         background-color: $primary-color;
         border-radius: 4px;
+        border-style: none;
     }
     
     &__name,
@@ -281,6 +287,8 @@
         border-radius: 4px;
         border-color: $quaternary-color;
         background-color: $tertiary-color;
+        border: 2px solid $quaternary-color;
+        
     }
 
     &__title,
