--- a/styles/bio.scss
+++ b/styles/bio.scss
@@ -232,10 +232,27 @@
   }
 }
 
+.commentsContainer {
+  margin: 0 1.6rem;
+
+  @include tablet {
+    margin: 0 2.4rem;
+  }
+
+  h2 {
+    font-size: 3rem;
+    color: $primary-color;
+  }
+}
+
 .commentsPage {
   display: flex;
   flex-direction: column;
   margin: 0 1.6rem;
+
+  @include tablet {
+    margin: 0 2.4rem;
+  }
 
   &__title {
     margin-bottom: 0;
@@ -270,6 +287,10 @@
     background-color: $primary-color;
     border-radius: 4px;
     border-style: none;
+
+    @include tablet {
+      width: 25%;
+    }
   }
 
   &__name,
@@ -341,6 +362,10 @@
 .commentsSectionContainer {
   display: flex;
   flex-direction: column-reverse;
+
+  @include tablet {
+    margin: 2.4rem;
+  }
 }
 
 .contact {
