--- a/styles/bio.css
+++ b/styles/bio.css
@@ -258,6 +258,7 @@ body {
   font-size: 3rem;
   font-weight: 600;
   color: #323232;
+  padding-top: 2rem;
 }
 @media (min-width: 768px) {
   .gallery__title {
@@ -307,7 +308,7 @@ body {
 }
 @media (min-width: 768px) {
   .commentsPage {
-    margin: 0 2.4rem;
+    margin: 0 4.8rem;
   }
 }
 @media (min-width: 1280px) {
@@ -412,7 +413,7 @@ body {
 }
 @media (min-width: 768px) {
   .commentsSectionContainer {
-    margin: 2.4rem;
+    margin: 4.8rem;
   }
 }
 @media (min-width: 1280px) {
