--- a/styles/bio.scss
+++ b/styles/bio.scss
@@ -209,6 +209,7 @@
     font-size: 3rem;
     font-weight: 600;
     color: $primary-color;
+    padding-top: 2rem;
 
     @include tablet {
       margin-left: 0;
@@ -256,7 +257,7 @@
   margin: 0 1.6rem;
 
   @include tablet {
-    margin: 0 2.4rem;
+    margin: 0 4.8rem;
   }
   @include desktop {
     margin: 0 30rem;
@@ -372,7 +373,7 @@
   flex-direction: column-reverse;
 
   @include tablet {
-    margin: 2.4rem;
+    margin: 4.8rem;
   }
   @include desktop {
     margin: 0 30rem;
